# UnixRemoteShellServer

./: CMakeLists.txt  HandleClientShellSession.c  HandleClientShellSession.h  ServerHelperFunctions.c  handle_pseudoterminal.c  handle_pseudoterminal.h  handle_remote_shell.c  handle_remote_shell.h  main.c  remote_login.c  remote_login.h  server_helper_functions.c  server_helper_functions.h
